--- a/frontend/birdsAI_app/scss/layout/_storytelling-template.scss
+++ b/frontend/birdsAI_app/scss/layout/_storytelling-template.scss
@@ -63,7 +63,7 @@ a:visited {
 }
 #swipe__text {
   color: $brand-color-primary;
-  padding-top: 20vh;
+  padding-top: 16vh;
 }
 
 #header p,
